--- a/index.ipynb
+++ b/index.ipynb
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "conn = sqlite3.Connection('data.sqlite')\n",
-    "cur = conn.cursor()"
+    "c = conn.cursor()"
    ]
   },
   {
