--- a/index.ipynb
+++ b/index.ipynb
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "conn = sqlite3.Connection('data.sqlite')\n",
-    "c = conn.cursor()"
+    "cur = conn.cursor()"
    ]
   },
   {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "4         London                      2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
